fix misalignment

--- a/doc.zih.tu-dresden.de/tud_theme/stylesheets/extra.css
+++ b/doc.zih.tu-dresden.de/tud_theme/stylesheets/extra.css
@@ -74,10 +74,14 @@ a:hover {
 
 /* header */
 
-.md-header, .md-header__title, .md-header__button,.md-header__topic {
+.md-header,
+.md-header__title, 
+.md-header__button,
+.md-header__topic {
     height: 80px;
 }  
 
+.md-header__button,
 .md-header__button.md-logo,
 .md-logo {
     padding: 0;
